# Ascend310

./: build-profile.json5  build_log3.txt  build_log4.txt  build_log5.txt  oh-package.json5
.deveco/plans/: 1781611682601-hidden-mountain.md  1781614817754-quick-harbor.md  1782307811819-jolly-cactus.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  hello.cpp  yolo_infer.cpp  yolo_infer.h
entry/src/main/cpp/types/: index.d.ts
entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: DetectionType.ets  YoloModel.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
hvigor/: hvigor-config.json5
